--- a/flex.html
+++ b/flex.html
@@ -4,31 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flex</title>
+    <title>Document</title>
     <link rel="stylesheet" href="flex.css" />
   </head>
   <body>
-    <div class="TopContainer">
+    <div class="Main-Container">
+      <nav>
+        <div class="Nav-Container">
+          <div class="logo">
             <div class="Storm">STORM</div>
             <div class="R">R</div>
-             <div class="Equal">=</div>
-    </div>
+          </div>
+          <div class="Equal">=</div>
+        </div>
+      </nav>
       <section>
         <div class="Photo">
-          <div class="img1">
+          <div class="pic1">
             <img class="image1" src="assets\img1.jpg"/>
           </div>
-          <div class="img2">
-            <img class="image2" src="assets\img2.jpg"/>
+          <div class="pic2">
+            <img class="image2" src="assets\img2.jpg" />
           </div>
         </div>
       </section>
       <section>
         <div class="Down-Container">
           <div class="Con1">
-            <div class="T1">
+            <div class="Title1">
               OVERVIEW:WEATHER, GLOBAL WARMING AND CLIMATE CHANGE
             </div>
           </div>
+          <div class="Con2">
+            <div class="Title2">
+              "CLIMATE CHANGE" AND "GLOBAL WARMING" ARE OFTEN USED
+              INTERCHANGEABLY BUT HAVE DISTINCT MEANINGS
+            </div>
+          </div>
+          <div class="Con3">
+            <div class="Title3"><div class="Title">THE WORLD IMPACT</div></div>
+            <div class="Title3"><div class="Title">TIME FOR CHANGE</div></div>
+            <div class="Title3">
+              <div class="Title">SLOWING THE PROCESS</div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
