-Initial commit done.

--- a/flex.html
+++ b/flex.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flex</title>
     <link rel="stylesheet" href="flex.css" />
   </head>
   <body>
     <div class="Main-Container">
-      <nav>
-        <div class="Nav-Container">
+        <div class="Top-Container">
           <div class="logo">
             <div class="Storm">STORM</div>
             <div class="R">R</div>
           </div>
           <div class="Equal">=</div>
         </div>
-      </nav>
       <section>
         <div class="Photo">
-          <div class="pic1">
+          <div class="img1">
             <img class="image1" src="assets\img1.jpg"/>
           </div>
-          <div class="pic2">
+          <div class="img2">
             <img class="image2" src="assets\img2.jpg" />
           </div>
         </div>
